--- a/views/signUpForm.pug
+++ b/views/signUpForm.pug
@@ -8,6 +8,8 @@ block content
       input#name.form-control(type='text', placeholder='name' name='name' value=(undefined===user ? '' : user.name))
       label(for='password') Password:
       input#password.form-control(type='text', placeholder='password' name='password' value=(undefined===user ? '' : user.password))
+      label(for='password') Confirm password:
+      input#confirmPassword.form-control(type='text', placeholder='confirmPassword' name='confirmPassword' value=(undefined===user ? '' : user.confirmPassword))
       button.btn.btn-primary(type='submit') Submit
 
   if errors
