--- a/views/index.pug
+++ b/views/index.pug
@@ -2,3 +2,8 @@ extends layout
 
 block content
   p Welcome to #[em Memebers only]
+
+   if user 
+    h1= user.username
+    a(href='/log-out') Log out
+   
