--- a/views/index.pug
+++ b/views/index.pug
@@ -8,9 +8,12 @@ block content
     br
     h1=msg.title 
     p=msg.text 
-    p=msg.date
-    p=msg.user.username
-  
+    p=msg.formatted_date
+    if (user && user.isMember)
+     p By #{msg.user.username}
+    else 
+     p By Unknown
+     
    if user 
     h1=user.username
     a(href='/log-out') Log out
