--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,5 +4,33 @@ html(lang='en')
     title= title
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
+    link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css", integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z", crossorigin="anonymous")
+    script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js", integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj", crossorigin="anonymous")
+    script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js", integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV", crossorigin="anonymous")
+    link(rel='stylesheet', href='/stylesheets/style.css')
+
+
   body
-    block content
+   nav(class="navbar navbar-expand-md navbar-dark bg-dark")
+      .container-fluid
+        a#brand(class="navbar-brand" href="/") Members Only 
+        button(class="navbar-toggler" type="button" 
+            data-toggle="collapse" data-target="#navbarNavAltMarkup" 
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" 
+            aria-label="Toggle navigation")
+          span(class="navbar-toggler-icon")
+        div(class="collapse navbar-collapse" id="navbarNavAltMarkup")
+          div#navBarLinks(class="navbar-nav ml-auto")
+            if(!user)
+             a.link(class="nav-link" href="/log-in") Log In
+             a.link(class="nav-link" href="/sign-up") Sign Up
+            else 
+             a(class="nav-link" href='/message/create') Create a post
+             a(class="nav-link" href='/become-member') Become member
+             a(class="nav-link" href='/log-out') Log Out
+             div.loggedUser
+              a(class="nav-link" href='/') #{user.username}
+
+  block content
+  
+
