--- a/views/signUpForm.pug
+++ b/views/signUpForm.pug
@@ -1,18 +1,17 @@
 extends layout
 
 block content
-  h1 #{User}
+ div.formContainer
+  div.formWrapper
+   h1.form-header Sign up
+   form(method='POST' action='')
+      input#username(type='text', placeholder='Name' name='username')
+      input#password(type='password', placeholder='Create password' name='password')
+      input#confirmPassword(type='password', placeholder='Confirm password' name='confirmPassword')
+      button.submitBtn(type='submit') Submit
 
-  form(method='POST' action='')
-      label(for='name') Name:
-      input#username.form-control(type='text', placeholder='name' name='username' value=(undefined===user ? '' : user.username))
-      label(for='password') Password:
-      input#password.form-control(type='password', placeholder='password' name='password' value=(undefined===user ? '' : user.password))
-      label(for='password') Confirm password:
-      input#confirmPassword.form-control(type='password', placeholder='confirmPassword' name='confirmPassword' value=(undefined===user ? '' : user.confirmPassword))
-      button.btn.btn-primary(type='submit') Submit
-
-  if errors
-   ul
-    for error in errors
-     li= error.msg
+   if errors
+    ul
+     for error in errors
+      li.errMsg= error.msg
+   
