--- a/views/LogInForm.pug
+++ b/views/LogInForm.pug
@@ -1,11 +1,14 @@
 extends layout
 
 block content
-  h1 #{title}
+ div.formContainer
+  div.formWrapper
+   h1.form-header Log in
+   form(method='POST' action='')
+    input#username.form(type='text', placeholder='Name' name='username')
+    input#password.form(type='password', placeholder='Password' name='password' )
+    button.submitBtn(type='submit') Submit
+ 
 
-  form(method='POST' action='')
-      input#username.form(type='text', placeholder='Name' name='username')
-      input#password.form(type='password', placeholder='Password' name='password' )
-      button.btn.btn-primary(type='submit') Submit
-
+   
  
