--- a/views/createMsgForm.pug
+++ b/views/createMsgForm.pug
@@ -1,11 +1,16 @@
 extends layout
 
 block content
-  h1 #{title}
-
-  form(method='POST' action='')
+ div.formContainer
+  div.formWrapper
+   h1.form-header Create a message
+   form(method='POST' action='')
       input#title.form(type='text', placeholder='Title' name='title')
       input#text.form(type='text', placeholder='Text' name='text' )
-      button(type='submit') Submit
+      button.submitBtn(type='submit') Submit
 
+   if errors
+    for error in errors
+     ul
+      li.errMsg= error.msg
   
